[project]
name = "jaeger-core"
version = "0.1.0a0"
description = "Core library to handle MPS fibre positioners"
readme = "README.md"
authors = [
    { name = "José Sánchez-Gallego", email = "gallegoj@uw.edu" }
]
requires-python = ">=3.11,<4"

dependencies = [
    "numpy>=1.25,<2; python_version<'3.11'",
    "numpy>=2.0,<3; python_version>='3.11'",
    "sdss-clu>=2.0.0",
    "click>=8.0.0",
    "click_default_group>=1.2.2",
    "astropy>=7.0.1",
    "zc-lockfile>=3.0.post1",
    "progressbar>=2.5",
]

[tool.uv]
package = true
dev-dependencies = [
    "ipython>=9.0.0",
    "pytest>=5.2.2",
    "pytest-asyncio>=0.10.0",
    "pytest-cov>=2.8.1",
    "pytest-sugar>=0.9.2",
    "coverage[toml]>=5.0",
    "ipdb>=0.13.3",
    "pytest-mock>=3.5.1",
    "ruff>=0.1.0",
]

[project.scripts]
jaeger = "jaeger.core.__main__:jaeger"

[tool.ruff]
line-length = 88
target-version = 'py312'
exclude = ["typings/"]

[tool.ruff.lint]
select = ["E", "F", "I"]
unfixable = ["F841"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403", "E402"]

[tool.ruff.lint.isort]
known-first-party = ["jaeger.core"]
lines-after-imports = 2
section-order = ["future", "standard-library", "typing", "third-party", "sdss", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
typing = ["typing"]
sdss = ["clu", "drift", "kaiju"]

[tool.pytest.ini_options]
addopts = "-p no:logging --disable-warnings --cov jaeger --cov-report xml --cov-report html --cov-report term"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
branch = true
include = ["src/jaeger/core/*"]
omit = [
    "*/__main__.py",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "class AsyncioExecutor",
    "class CANnetInterface",
    "if TYPE_CHECKING:",
    "def __repr__"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
include = ['src/*']

[tool.hatch.build.targets.wheel]
packages = ["src/jaeger"]
